--- a/.github/workflows/publish_docker_image.yaml
+++ b/.github/workflows/publish_docker_image.yaml
@@ -8,12 +8,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Publish to Github Packages
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: ${{ github.repository }}/youtube-scraper
+          registry: https://ghcr.io
+          repository: tontan2545/youtube-scraper
           tags: latest, ${{ github.run_number }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
