--- a/.github/workflows/publish_docker_image.yaml
+++ b/.github/workflows/publish_docker_image.yaml
@@ -1,20 +1,12 @@
 name: Build and Publish to Docker Hub
 on: push
 jobs:
-  build-container:
+  Build-and-Publish-Docker-Hub:
     name: Build Docker Image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Publish to Github Packages
-        uses: docker/build-push-action@v2
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: https://ghcr.io
-          repository: tontan2545/youtube-scraper
-          tags: latest, ${{ github.run_number }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
@@ -27,3 +19,14 @@ jobs:
         with:
           push: True
           tags: tontan2203/youtube-scraper:latest
+  Build-and-Publish-Github-Packages:
+    name: Build and Publish to Github Packages
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Build, Tag, Push
+        uses: mattdavis0351/actions/docker-gpr@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          image-name: youtube-scraper
